[gd_scene load_steps=6 format=3 uid="uid://diypf3n08kgdi"]

[ext_resource type="Script" uid="uid://03jsa20fak2f" path="res://Assets/Scripts/Menus/level_select.gd" id="1_2sh00"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02tgw"]
bg_color = Color(0.827451, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u70ur"]
bg_color = Color(1, 0.833941, 0.805989, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh0xv"]
bg_color = Color(1, 0.469494, 0.401435, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twp72"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sh00")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 75
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["level_buttons"]]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "1"

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" groups=["level_highscore_labels"]]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" groups=["level_buttons"]]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "2"

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" groups=["level_highscore_labels"]]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3" groups=["level_buttons"]]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "3"

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3" groups=["level_highscore_labels"]]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4" groups=["level_buttons"]]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "4"

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4" groups=["level_highscore_labels"]]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5" groups=["level_buttons"]]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "5"

[node name="HighScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5" groups=["level_highscore_labels"]]
layout_mode = 2
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 12.0
offset_top = 656.0
offset_right = 162.0
offset_bottom = 706.0
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "Back"

[node name="ShipMenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -64.0
offset_right = 75.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_02tgw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u70ur")
theme_override_styles/hover = SubResource("StyleBoxFlat_kh0xv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_twp72")
text = "Ship Upgrades"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ShipMenuButton" to="." method="_on_ship_upgrade_menu_button_pressed"]
